# test_c_unity_cmake

./: .github-ci.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  coverage.sh  coverage_gcov.sh  sonar-project.properties
.github/workflows/: github-ci.yml
ext_lib/: CMakeLists.txt
src/: CMakeLists.txt  README.md  main.c
src/lib/sum/: CMakeLists.txt  sum.c
tests/lib/: CMakeLists.txt
tests/lib/sum/: CMakeLists.txt  test_sum.c
